--- a/ContactBookApp.Core/ContactBookApp.Core.csproj
+++ b/ContactBookApp.Core/ContactBookApp.Core.csproj
@@ -22,6 +22,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ContactBookApp.Commons\ContactBookApp.Commons.csproj" />
+    <ProjectReference Include="..\ContactBookApp.Data\ContactBookApp.Data.csproj" />
     <ProjectReference Include="..\ContactBookApp.Model\ContactBookApp.Model.csproj" />
   </ItemGroup>
 
