--- a/ContactBookApp/ContactBookApp.csproj
+++ b/ContactBookApp/ContactBookApp.csproj
@@ -29,4 +29,9 @@
     <ProjectReference Include="..\ContactBookApp.Model\ContactBookApp.Model.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\ImageUpload\" />
+    <Folder Include="Controllers\Authentications\" />
+  </ItemGroup>
+
 </Project>
